Fixed the filters to be sticky, the position sticky doesn't work inside a flexbox unless you align-self: flex-startgit add .git add . I didn't know that smh...

--- a/src/componets/sidebar/sidebar.module.css
+++ b/src/componets/sidebar/sidebar.module.css
@@ -1,5 +1,8 @@
 .container {
   padding: 2rem;
+  position: sticky;
+  top: 0;
+  align-self: flex-start;
 }
 .container * {
   font-size: large;
@@ -15,7 +18,7 @@
   margin: 0;
   font-size: xx-large;
 }
-.rating:hover{
+.rating:hover {
   cursor: pointer;
   user-select: none;
 }
